--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -11,8 +11,12 @@
 </p>
 
 <p>
-  <strong>Thumbnail:</strong>
-  <%= image_tag @blog.thumbnail.variant(resize_to_limit: [800, 800]) %>
+ <strong>Thumbnail:</strong>
+    <% if @blog.thumbnail.attached? %>
+      <%= image_tag @blog.thumbnail.variant(resize_to_limit: [800, 800]) %>
+    <% else %>
+      <em>No thumbnail</em>
+    <% end %>
 </p>
 
 <%= link_to 'Edit', edit_blog_path(@blog) %> |
